--- a/.github/workflows/test-action.yml
+++ b/.github/workflows/test-action.yml
@@ -10,12 +10,12 @@ on:
 jobs:
   dry-run-test:
     name: "Dry Run Test"
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     timeout-minutes: 10
     
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v4
+        uses: actions/checkout@de0fac2e4500dabe0009e67214ff5f5447ce83dd
 
       - name: Run headless-agent (Dry Run)
         uses: ./
@@ -23,4 +23,4 @@ jobs:
           mission: "Analyze the repository README.md and suggest 3 improvements. Do not implement anything."
           dry_run: "true"
           github_token: ${{ secrets.COPILOT_GOV_TOKEN }}
-          model: "gpt-4o"
+          model: "gpt-5-mini"
