--- a/.github/workflows/test-action.yml
+++ b/.github/workflows/test-action.yml
@@ -17,6 +17,18 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@de0fac2e4500dabe0009e67214ff5f5447ce83dd
 
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: "24"
+          cache: "npm"
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Run Unit Tests
+        run: make test
+
       - name: Run headless-agent (Dry Run)
         uses: ./
         with:
