feat: increase go coverage to 87.5% and update PR reporting (#17)
# Description

This PR increases the Go source code coverage from 25.9% to 87.5%,
exceeding the 80% requirement. It also improves the testability of the
project through dependency injection and updates the CI/CD pipeline to
use Makefiles and provide granular file-level coverage reports.

- Refactored `agent.go`, `auth.go`, `setup.go`, and `main.go` to use
interfaces for command execution and HTTP requests.
- Added comprehensive unit tests: `auth_test.go`, `setup_test.go`,
`main_test.go`, and improved `agent_test.go`.
- Fixed the `Makefile` to handle PATH issues for Go binary discovery.
- Updated `test-action.yml` to enforce an 80% coverage threshold and
display file-level reports.
- Added a `generate_coverage_report.sh` script integrated into the
`Makefile`.

## 🔗 Related Issue

> Fixes #none

## Type of change

- [x] New feature (non-breaking change which adds functionality)
- [ ] Bug fix (non-breaking change which fixes an issue)
- [ ] Breaking change (fix or feature that would cause existing
functionality to not work as expected)
- [ ] Documentation update

## How Has This Been Tested?

I ran `make test` and `make coverage-report` locally to verify that all
tests pass and the coverage exceeds 87.5% with the new granular report
format.

## Checklist:

- [x] My code follows the style guidelines of this project
- [x] I have performed a self-review of my own code
- [x] I have commented my code, particularly in hard-to-understand areas
- [x] I have made corresponding changes to the documentation
- [x] I have updated 'action.yml' (if changing inputs/outputs)
- [x] I have verified the action runs successfully
- [x] My changes generate no new warnings
- [x] I have added tests that prove my fix is effective or that my
feature works
- [x] New and existing unit tests pass locally with my changes

--- a/.github/workflows/test-action.yml
+++ b/.github/workflows/test-action.yml
@@ -24,15 +24,16 @@ jobs:
           fetch-depth: 10
 
       - name: Run Unit Tests
-        run: |
-          go test -v -coverprofile=coverage.out ./src/...
+        run: make test
+
 
       - name: Go Coverage report
         uses: gwatts/go-coverage-action@v2
         id: coverage
         with:
-          coverage-threshold: 20
+          coverage-threshold: 80
           cover-pkg: ./src/...
+
           ignore-pattern: |
             \.pb\.go$
             \_string\.go$
@@ -59,3 +60,9 @@ jobs:
           dry_run: "true"
           github_token: ${{ secrets.COPILOT_GOV_TOKEN }}
           model: "gpt-5-mini"
+
+      - name: Detailed Coverage Report
+        if: github.event_name == 'pull_request'
+        run: make coverage-report
+
+
